--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todonato",
+  "name": "taskinator",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -31,5 +31,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://yujinyuz.github.io/taskinator"
+  "homepage": "https://jinyuz.me/taskinator/"
 }
